gccida/c1/output_constant_def
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/output_constant_def/src/varasm.c:3738:35: error: use of undeclared identifier 'machine_mode'
v8 = gen_rtx_fmt_s( SYMBOL_REF, ( machine_mode)( ( ( target_flags & 0x2000000 | 0x500000000uLL) - 1) >> 32), v5->label); 
                                  ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/output_constant_def/src/varasm.c:3739:22: error: use of undeclared identifier 'machine_mode'
rtl = gen_rtx_MEM( ( machine_mode)v7, v8); 
                     ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/output_constant_def/src/obj/varasm.o] Error 1
